# toy-lib

./: .gitignore  Algorithm-BinarySearch.html  Algorithm-Bisect.html  Algorithm-Imos.html  Algorithm-Mo.html  Algorithm-SlideMin.html  Algorithm-TwoPointers.html  CHANGELOG.md  Core-SemigroupAction.html  Core-Semiring.html  Data-AdhocGraph.html  Data-AllocVec.html  Data-BinaryHeap.html  Data-BinaryLifting.html  Data-BitSet.html  Data-Buffer.html  Data-ByteString-SuffixArray.html  Data-ByteString-ZFunction.html  Data-Core-Group.html  Data-Core-SegmentAction.html  Data-Core-SegmentTreeAction.html  Data-Core-SemigroupAction.html  Data-Core-Semiring.html  Data-Core-Unindex.html  Data-DenseHashMap.html  Data-DenseIntMap.html  Data-DenseIntSet.html  Data-Dinic.html  Data-FromVec.html  Data-Graph-Alias.html  Data-Graph-Digraph.html  Data-Graph-Dinic.html  Data-Graph-FloydWarshall.html  Data-Graph-Generic.html  Data-Graph-MaxFlow.html  Data-Graph-MinCostFlow.html  Data-Graph-Scc.html  Data-Graph-Sparse.html  Data-Graph-Tree-Hld.html  Data-Graph-Tree-LCT.html  (+144 more)
app/: Lib.hs  Main.hs  help
app/Lib/: Parse.hs  Write.hs
old_src/Graph/: Digraph.hs  Scc.hs
script/: toylib
scripts/: doc  doc-firefox  doc-update  doctest  upload  verify  verify-all
src/: Algorithm.BinarySearch.html  Algorithm.Imos.html  Algorithm.TwoPointers.html  Data.BinaryLifting.html  Data.BitSet.html  Data.Buffer.html  Data.FromVec.html  Data.Graph.Digraph.html  Data.Graph.FloydWarshall.html  Data.Graph.MaxFlow.html  Data.Graph.Scc.html  Data.Graph.Sparse.html  Data.Graph.html  Data.IxVector.html  Data.ModInt.html  Data.MultiSet.html  Data.MultiSetVec.html  Data.RollingHash.html  Data.SafeList.html  Data.SegmentTree.Lazy.html  Data.SegmentTree.Strict.html  Data.SemigroupAction.html  Data.Semiring.html  Data.SizedList.html  Data.SparseGraph.html  Data.Tree.Fold.html  Data.Tree.Lca.html  Data.Unindex.html  Data.UnionFind.Mutable.html  Data.UnionFind.Sparse.html  Data.Vector.Compress.html  Data.Vector.DictOrder.html  Data.Vector.InvNum.html  Data.Vector.IxVector.html  Data.Vector.View2d.html  Data.Vector.View3d.html  Lib.hs  Math.Bits.html  Math.Digits.html  Math.DigitsVector.html  (+15 more)
src/Algorithm/: BinarySearch.hs  Bisect.hs  Imos.hs  Mo.hs  SlideMin.hs  TwoPointers.hs
src/Core/: SemigroupAction.hs  Semiring.hs
src/Data/: AdhocGraph.hs  AllocVec.hs  BinaryHeap.hs  BinaryLifting.hs  BitSet.hs  Buffer.hs  DenseHashMap.hs  DenseIntMap.hs  DenseIntSet.hs  DenseIntervalMap.hs  DigitDp.hs  Dinic.hs  FenwickTree.hs  FromVec.hs  Graph.hs  IntervalMap.hs  IntervalSet.hs  IxVector.hs  ModInt.hs  MultiSet.hs  MultiSet2.hs  MultiSetVec.hs  Pool.hs  RangeMap.hs  RangeSet.hs  RollingHash.hs  SafeList.hs  SemigroupAction.hs  Semiring.hs  SizedList.hs  Slide.hs  SparseGraph.hs  SplayMap.hs  SplaySeq.hs  Sqrd.hs  SuperGraph.hs  Trie.hs  UnIndex.hs  Unindex.hs  WaveletMatrix.hs  (+1 more)
src/Heuristic/: Randoms.hs
src/Math/: BitSet.hs  Bits.hs  Digits.hs  DigitsVector.hs  Divisors.hs  Exgcd.hs  FloorSum.hs  Manhattan.hs  Matrix.hs  NTT.hs  PowMod.hs  Primes.hs  Stimes.hs
src/ToyLib/: BFS01.hs  Compat.hs  (+13 more)
template/: Body.hs  Footer.hs  GHC2021.hs  Header.hs  Imports.hs  Macros.hs  Main.hs
test/: Spec.hs
tests/: Main.hs
toy-lib/: Algorithm-BinarySearch.html  Data-BinaryLifting.html  Data-Graph-Scc.html  Data-RollingHash.html  Data-SegmentTree-Lazy.html  Data-SegmentTree-Strict.html  Data-Vector-Compress.html  Data-Vector-InvNum.html  Math-Bits.html  Math-PowMod.html  ToyLib-Macro.html  ToyLib.html  doc-index-95.html  doc-index-C.html  doc-index-E.html  doc-index-H.html  doc-index-I.html  doc-index-T.html  doc-index-W.html  doc-index-Y.html  doc-index.json  toy-lib.haddock  toy-lib.txt
verify/: .gitignore  README.org  add  compile  execute  verify.cabal
verify/.verify-helper/: config.toml
verify/app/: __import  __template  abc133-f.hs  abc276-f.hs  abc294-g.hs  abc330-e.hs  abc348-e.hs  abc372-d.hs  acl-practice-b.hs  acl-practice-f.hs  acl-practice-h.hs  acl-practice-i.hs  acl-practice-k.hs  past06-m-dense.hs  past06-m.hs  past06-o.hs  past08-k.hs  past10-n.hs  yosupo-convolution-convolution.hs  yosupo-data-deque-operate-all-composite.hs  yosupo-data-deque.hs  yosupo-data-dynamic-sequence-range-affine-range-sum.hs  yosupo-data-persistent-queue.hs  yosupo-data-persistent-unionfind.hs  yosupo-data-point-add-range-sum.hs  yosupo-data-point-set-range-sort-range-composite.hs  yosupo-data-predecessor-problem.hs  yosupo-data-queue-operate-all-composite.hs  yosupo-data-range-chmin-chmax-add-range-sum.hs  yosupo-data-range-reverse-range-sum.hs  yosupo-data-range-set-range-composite_with-length.hs  yosupo-data-rectangle-sum.hs  yosupo-data-static-range-count-distinct.hs  yosupo-data-union-find.hs  yosupo-graph-cycle-detection-undirected.hs  yosupo-graph-cycle-detection.hs  yosupo-graph-lca-BL.hs  yosupo-graph-lca-HLD.hs  yosupo-graph-minimum-spanning-tree.hs  yosupo-la-matrix-product.hs  (+16 more)
verify/src/: __import  __template  abc133-f.hs  abc276-f.hs  abc294-g.hs  abc330-e.hs  abc348-e.hs  acl-convolution.hs  acl-practice-d.hs  acl-practice-f.hs  acl-practice-h.hs  acl-practice-i.hs  acl-practice-k.hs  past06-m.hs  past06-o.hs  past08-k.hs  past10-n.hs  tmp.hs  yosupo-convolution-convolution.hs  yosupo-data-area-of-union-of-rectangles.hs  yosupo-data-associative-array.hs  yosupo-data-deque-operate-all-composite.hs  yosupo-data-deque.hs  yosupo-data-dynamic-sequence-range-affine-range-sum.hs  yosupo-data-new-union-find-with-potencial.hs  yosupo-data-persistent-unionfind.hs  yosupo-data-point-add-range-sum.hs  yosupo-data-point-add-rectangle-sum.hs  yosupo-data-point-set-range-sort-range-composite.hs  yosupo-data-predecessor-problem.hs  yosupo-data-predecessor-problem_splay-set.hs  yosupo-data-queue-operate-all-composite.hs  yosupo-data-range-affine-point-get.hs  yosupo-data-range-affine-range-sum.hs  yosupo-data-range-chmin-chmax-add-range-sum.hs  yosupo-data-range-kth-smallest.hs  yosupo-data-range-reverse-range-sum.hs  yosupo-data-range-set-range-composite.hs  yosupo-data-range-set-range-composite_with-length.hs  yosupo-data-rectangle-sum.hs  (+30 more)
(+115 files in other folders)
