cabal-version:      3.4
name:               toy-lib
version:            0.1.0.0
description:        My Haskell library for AtCoder contests
homepage:           https://github.com/toyboot4e/toy-lib#readme
bug-reports:        https://github.com/toyboot4e/toy-lib/issues
author:             toyboot4e
maintainer:         toyboot4e@gmail.com
copyright:          2023 toyboot4e
license:            MIT
build-type:         Simple
extra-source-files:
  CHANGELOG.md
  README.md

flag atcoder
  description: Indicates this is on the AtCoder judge server
  default:     False
  manual:      True

flag debug
  description: Indicates this is for ru with debug output
  default:     False
  manual:      True

common deps
  build-depends:
    , adjunctions                    ^>=4.4.2
    , array                          ==0.5.4.0
    , attoparsec                     ^>=0.14.4
    , base                           ==4.17.1.0
    , bifunctors                     ^>=5.6.1
    , binary                         ^>=0.8.9.1
    , bitvec                         ^>=1.1.4.0
    , bytestring                     ^>=0.11.4.0
    , Cabal                          ^>=3.10.1.0
    , Cabal-syntax                   ^>=3.10.1.0
    , comonad                        ^>=5.0.8
    , containers                     ^>=0.6.7
    , contravariant                  ^>=1.5.5
    , deepseq                        ==1.4.8.0
    , directory                      >=1.3.7.1     && <1.3.8.0
    , distributive                   ^>=0.6.2.1
    , exceptions                     ^>=0.10.7
    , extra                          ^>=1.7.13
    , fgl                            ^>=5.8.1.1
    , filepath                       >=1.4.2.2     && <1.4.99
    , free                           ^>=5.2
    , ghc-bignum                     ==1.3
    , ghc-boot-th                    ==9.4.5
    , ghc-prim                       ==0.9.0
    , hashable                       ^>=1.4.2.0
    , heaps                          ^>=0.4
    , indexed-traversable            ^>=0.1.2.1
    , indexed-traversable-instances  ^>=0.1.1.2
    , integer-gmp                    ^>=1.1
    , integer-logarithms             ^>=1.0.3.1
    , kan-extensions                 ^>=5.2.5
    , lens                           ^>=5.2.2
    , linear-base                    ^>=0.3.1
    , list-t                         ^>=1.0.5.6
    , massiv                         ^>=1.0.4.0
    , megaparsec                     ^>=9.4.1
    , mono-traversable               ^>=1.0.15.3
    , mtl                            ^>=2.3.1
    , mutable-containers             ^>=0.3.4.1
    , mwc-random                     ^>=0.15.0.2
    , parallel                       ^>=3.2.2.0
    , parsec                         ^>=3.1.16.1
    , parser-combinators             ^>=1.3.0
    , pretty                         ^>=1.1.3.6
    , primitive                      ^>=0.8.0.0
    , process                        ^>=1.6.17.0
    , profunctors                    ^>=5.6.2
    , psqueues                       ^>=0.2.7.3
    , QuickCheck                     ^>=2.14.3
    , random                         ^>=1.2.1.1
    , reflection                     ^>=2.1.7
    , regex-tdfa                     ^>=1.3.2.1
    , safe-exceptions                ^>=0.1.7.3
    , scientific                     ^>=0.3.7.0
    , semialign                      ^>=1.3
    , semigroupoids                  ^>=6.0.0.1
    , split                          ^>=0.2.3.5
    , stm                            ^>=2.5.1.0
    , strict                         ^>=0.5
    , strict-lens                    ^>=0.4.0.3
    , tagged                         ^>=0.8.7
    , template-haskell               ==2.19.0.0
    , text                           ^>=2.0.2
    , tf-random                      ^>=0.5
    , these                          ^>=1.2
    , these-lens                     ^>=1.0.1.3
    , time                           ^>=1.12.2
    , transformers                   ^>=0.6.1.0
    , trifecta                       ^>=2.1.2
    , unboxing-vector                ^>=0.2.0.0
    , unix                           ==2.7.3
    , unordered-containers           ^>=0.2.19.1
    , utility-ht                     ^>=0.0.17
    , vector                         ^>=0.13.0.0
    , vector-algorithms              ^>=0.9.0.1
    , vector-stream                  ^>=0.1.0.0
    , vector-th-unbox                ^>=0.2.2
    , xhtml                          ^>=3000.2.2.1

  if flag(atcoder)
    cpp-options: -DATCODER

  if flag(debug)
    cpp-options: -DDEBUG

common exts2021
  default-extensions:
    NoImportQualifiedPost
    BangPatterns
    BinaryLiterals
    ConstrainedClassMethods
    ConstraintKinds
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DoAndIfThenElse
    EmptyCase
    EmptyDataDecls
    EmptyDataDeriving
    ExistentialQuantification
    ExplicitForAll
    FieldSelectors
    FlexibleContexts
    FlexibleInstances
    ForeignFunctionInterface
    GADTSyntax
    GeneralisedNewtypeDeriving
    HexFloatLiterals
    ImplicitPrelude
    InstanceSigs
    KindSignatures
    MonomorphismRestriction
    MultiParamTypeClasses
    NamedFieldPuns
    NamedWildCards
    NumericUnderscores
    PatternGuards
    PolyKinds
    PostfixOperators
    RankNTypes
    RelaxedPolyRec
    ScopedTypeVariables
    StandaloneDeriving
    StandaloneKindSignatures
    StarIsType
    TraditionalRecordSyntax
    TupleSections
    TypeApplications
    TypeOperators
    TypeSynonymInstances

source-repository head
  type:     git
  location: https://github.com/toyboot4e/toy-lib

library
  import:           deps, exts2021
  default-language: Haskell2010

  -- updated with `cabal-fmt -i toy-lib.cabal`:
  -- cabal-fmt: expand src
  exposed-modules:
    Algorithm.BinarySearch
    Algorithm.Imos
    Algorithm.Mo
    Algorithm.TwoPointers
    Data.BinaryLifting
    Data.BitSet
    Data.Buffer
    Data.FromVec
    Data.Graph
    Data.Graph.Digraph
    Data.Graph.FloydWarshall
    Data.Graph.MaxFlow
    Data.Graph.Scc
    Data.ModInt
    Data.MultiSet
    Data.MultiSetVec
    Data.RollingHash
    Data.SafeList
    Data.SegmentTree.Lazy
    Data.SegmentTree.Strict
    Data.SemigroupAction
    Data.Semiring
    Data.SizedList
    Data.SparseGraph
    Data.Tree.Fold
    Data.Tree.Lca
    Data.Unindex
    Data.UnionFind.Mutable
    Data.UnionFind.Potencial
    Data.UnionFind.Sparse
    Data.Vector.Compress
    Data.Vector.DictOrder
    Data.Vector.InvNum
    Data.Vector.IxVector
    Heuristic.Randoms
    Math.Bits
    Math.Digits
    Math.DigitsVector
    Math.Divisors
    Math.Exgcd
    Math.Manhattan
    Math.Matrix
    Math.PowMod
    Math.Primes
    ToyLib.Debug
    ToyLib.DP
    ToyLib.IO
    ToyLib.Macro
    ToyLib.Prelude

  hs-source-dirs:   src
  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wmissing-export-lists
    -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
    -Wno-missing-export-lists

executable toy-lib-exe
  import:           deps
  default-language: GHC2021
  main-is:          Main.hs
  hs-source-dirs:   app
  build-depends:
    , haskell-src-exts
    , temporary
    , toy-lib

  ghc-options:      -Wall

test-suite toy-lib-test
  -- import:           deps
  default-language: GHC2021
  type:             exitcode-stdio-1.0
  main-is:          Spec.hs
  hs-source-dirs:   test
  build-depends:    base ==4.17.1.0

  -- , toy-lib
  ghc-options:      -Wall
