cabal-version: 3.4
name: toy-lib
version: 0.1.0.0
description: My Haskell library for AtCoder contests
homepage: https://github.com/toyboot4e/toy-lib#readme
bug-reports: https://github.com/toyboot4e/toy-lib/issues
author: toyboot4e
maintainer: toyboot4e@gmail.com
copyright: 2023 toyboot4e
license: CC0-1.0
license-file: LICENSE
build-type: Simple
extra-source-files:
  CHANGELOG.md
  README.md

flag atcoder
  description: Indicates this is on the AtCoder judge server
  default: False
  manual: True

flag debug
  description: Indicates if this is run with debug output
  default: False
  manual: True

common deps
  build-depends:
    -- hmatrix ^>=0.20.2,
    -- hmatrix-glpk ^>=0.19.0.0,
    -- hmatrix-gsl ^>=0.19.0.1,
    -- hmatrix-special ^>=0.19.0.0,
    Cabal ^>=3.16.0.0,
    Cabal-syntax ^>=3.16.0.0,
    QuickCheck ^>=2.16.0.0,
    ac-library-hs ^>=1.5.3.0,
    adjunctions ^>=4.4.3,
    array ==0.5.8.0,
    attoparsec ^>=0.14.4,
    base ==4.19.2.0,
    bifunctors ^>=5.6.2,
    binary ^>=0.8.9.3,
    bitvec ^>=1.1.5.0,
    bytestring ^>=0.12.2.0,
    comonad ^>=5.0.9,
    containers ^>=0.8,
    contravariant ^>=1.5.5,
    deepseq ==1.5.1.0,
    directory ^>=1.3.9.0,
    distributive ^>=0.6.2.1,
    exceptions ^>=0.10.7,
    extra ^>=1.8,
    fgl ^>=5.8.3.0,
    filepath ^>=1.4.301.0,
    flow ^>=2.0.0.9,
    free ^>=5.2,
    ghc-bignum ==1.3,
    ghc-boot-th ==9.8.4,
    ghc-prim ==0.11.0,
    hashable ^>=1.5.0.0,
    heaps ^>=0.4.1,
    ilist ^>=0.4.0.1,
    indexed-traversable ^>=0.1.4,
    indexed-traversable-instances ^>=0.1.2,
    integer-gmp ^>=1.1,
    integer-logarithms ^>=1.0.4,
    kan-extensions ^>=5.2.7,
    lens ^>=5.3.5,
    linear-base ^>=0.5.0,
    list-t ^>=1.0.5.7,
    massiv ^>=1.0.5.0,
    megaparsec ^>=9.7.0,
    monad-memo ^>=0.5.4,
    mono-traversable ^>=1.0.21.0,
    mtl ^>=2.3.1,
    mutable-containers ^>=0.3.4.1,
    mwc-random ^>=0.15.2.0,
    parallel ^>=3.2.2.0,
    parsec ^>=3.1.18.0,
    parser-combinators ^>=1.3.0,
    pretty ^>=1.1.3.6,
    primitive ^>=0.9.1.0,
    process ^>=1.6.26.1,
    profunctors ^>=5.6.3,
    psqueues ^>=0.2.8.2,
    random ^>=1.3.1,
    reflection ^>=2.1.9,
    regex-tdfa ^>=1.3.2.4,
    safe-exceptions ^>=0.1.7.4,
    scientific ^>=0.3.8.0,
    semialign ^>=1.3.1,
    semigroupoids ^>=6.0.1,
    split ^>=0.2.5,
    stm ^>=2.5.3.1,
    strict ^>=0.5.1,
    strict-lens ^>=0.4.1,
    tagged ^>=0.8.9,
    template-haskell ==2.21.0.0,
    text ^>=2.1.3,
    tf-random ^>=0.5,
    these ^>=1.2.1,
    these-lens ^>=1.0.2,
    time ^>=1.12.2,
    transformers ^>=0.6.1.0,
    trifecta ^>=2.1.4,
    unboxing-vector ^>=0.2.0.0,
    unix ==2.8.6.0,
    unordered-containers ^>=0.2.20,
    utility-ht ^>=0.0.17.2,
    vector ^>=0.13.2.0,
    vector-algorithms ^>=0.9.1.0,
    vector-split ^>=1.0.0.4,
    vector-stream ^>=0.1.0.1,
    vector-th-unbox ^>=0.2.2,
    wide-word ^>=0.1.7.1,
    witherable ^>=0.5,
    xhtml ^>=3000.2.2.1,

  if flag(atcoder)
    cpp-options: -DATCODER

  if flag(debug)
    cpp-options: -DDEBUG

common exts2021
  default-extensions:
    BangPatterns
    BinaryLiterals
    ConstrainedClassMethods
    ConstraintKinds
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DoAndIfThenElse
    EmptyCase
    EmptyDataDecls
    EmptyDataDeriving
    ExistentialQuantification
    ExplicitForAll
    FieldSelectors
    FlexibleContexts
    FlexibleInstances
    ForeignFunctionInterface
    GADTSyntax
    GeneralisedNewtypeDeriving
    HexFloatLiterals
    ImplicitPrelude
    InstanceSigs
    KindSignatures
    MonomorphismRestriction
    MultiParamTypeClasses
    NamedFieldPuns
    NamedWildCards
    NoImportQualifiedPost
    NumericUnderscores
    PatternGuards
    PolyKinds
    PostfixOperators
    RankNTypes
    RelaxedPolyRec
    ScopedTypeVariables
    StandaloneDeriving
    StandaloneKindSignatures
    StarIsType
    TraditionalRecordSyntax
    TupleSections
    TypeApplications
    TypeOperators
    TypeSynonymInstances

source-repository head
  type: git
  location: https://github.com/toyboot4e/toy-lib

library
  import: deps, exts2021
  default-language: Haskell2010
  -- updated with `cabal-fmt -i toy-lib.cabal`:
  -- cabal-gild: discover src
  exposed-modules:
    Algorithm.Bisect
    Algorithm.SlideMin
    Algorithm.TwoPointers
    Data.ByteString.SuffixArray
    Data.Core.Group
    Data.Core.SemigroupAction
    Data.Core.Semiring
    Data.Core.Unindex
    Data.Graph.Alias
    Data.Graph.Generic
    Data.Instances.A2
    Data.Instances.A3
    Data.Instances.Affine1
    Data.MultiSet
    Data.MultiSet2
    Data.MultiSetVec
    Data.SafeList
    Data.SegmentTree.Beats
    Data.SegmentTree.Beats.SumMinMax
    Data.SegmentTree.Util
    Data.Slide
    Data.Trie
    Data.UnionFind.Sparse
    Data.Vector.CSum
    Data.Vector.Extra
    Data.Vector.InvNum
    Data.Vector.IxVector
    Heuristic.Randoms
    Math.BitSet
    Math.Digits
    Math.DigitsVector
    Math.Divisors
    Math.Exgcd
    Math.Manhattan
    Math.PowMod
    ToyLib.Compat
    ToyLib.Contest.Grid
    ToyLib.Contest.Prelude
    ToyLib.DP
    ToyLib.Debug
    ToyLib.Debug.Grid
    ToyLib.Macro
    ToyLib.Parser
    ToyLib.Parser.Grid
    ToyLib.Prelude
    ToyLib.ShowBSB
    ToyLib.ShowBSB.Grid

  hs-source-dirs: src
  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wmissing-export-lists
    -Wmissing-home-modules
    -Wpartial-fields
    -Wredundant-constraints
    -Wno-missing-export-lists

executable toy-lib-exe
  import: deps
  default-language: GHC2021
  main-is: Main.hs
  hs-source-dirs: app
  other-modules:
    Lib
    Lib.Parse
    Lib.Write

  build-depends:
    haskell-src-exts,
    temporary,
    toy-lib,

  ghc-options: -Wall

test-suite toy-lib-test
  -- import:           deps
  default-language: GHC2021
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs: tests
  -- cabal-gild: discover tests --exclude=tests/Main.hs
  other-modules:
    Tests.Bisect
    Tests.PowMod
    Tests.Slide
    Tests.SlideMin
    Tests.SumMinMax
    Tests.Util

  build-depends:
    QuickCheck,
    ac-library-hs,
    base,
    bitvec,
    bytestring,
    containers,
    extra,
    primitive,
    tasty,
    tasty-hspec,
    tasty-hunit,
    tasty-quickcheck,
    toy-lib,
    transformers,
    utility-ht,
    vector,
    vector-algorithms,

  -- , toy-lib
  ghc-options: -Wall
